<resources>
    <string name="main_login">登录</string>
    <string name="main_chat_use_wlan">WLAN聊天</string>
    <string name="main_input_password">这里输入密码</string>
    <string name="main_remenber_password">记住密码</string>
    <string name="main_forget_password">忘记密码</string>
    <string name="main_auto_login">自动为我登陆</string>
    <string name="main_register">注册</string>
    <string name="main_vertical_line">|</string>
    <string name="main_set">设置</string>
    <string name="main_product_short">TM</string>
    <string name="main_team_name">Neekle</string>
    <string name="main_team">Team</string>
    <string name="main_invalid_jid_or_passwd">无效的用户名或密码</string>
    <string name="main_invalid_jid">无效的用户名</string>
    <string name="main_passwd_should_not_null">密码不能为空</string>
    <string name="main_login_failed">登录失败</string>
    <string name="main_is_loging">正在登录</string>
    <string name="please_set_server_address">请设置服务器地址</string>
    <string name="unable_to_get_valid_service">无法获取有效的服务</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_account">注册账号</string>
    <string name="chat_use_wlan">WLAN聊天</string>
    <string name="software_setting">软件设置</string>
    <string name="server_address">服务器地址</string>
    <string name="delegate">代理</string>
    <string name="not_use_delegate">不使用代理</string>
    <string name="type">类型</string>
    <string name="address">地址</string>
    <string name="port">端口</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="use_neek_msg_service_and_address_is">使用霓信服务，地址：</string>
    <string name="use_your_own_server_and_address_is">使用您所在企业或组织的服务器，地址：</string>
    <string name="dial">智能拨号</string>
    <string name="all">全部</string>
    <string name="un_answer">未接</string>
    <string name="addsbook_ellipsis">&#160;&#160;&#160;...&#160;&#160;&#160;</string>
    <string name="addsbook_search_hint">搜索</string>
    <string name="addsbook">联系人</string>
    <string name="addsbook_often_contact_person">星标联系人</string>
    <string name="my_cellphone">我的手机</string>
    <string name="please_choose">请选择</string>
    <string name="often_contact_person_name">张三</string>
    <string-array name="friend_operation_items_filter">
        <item>&#160;&#160;添加朋友</item>
        <item>&#160;&#160;创建群</item>
        <item>&#160;&#160;创建团队</item>
        <item>&#160;&#160;√只显示朋友</item>
    </string-array>
    <string-array name="friend_operation_items_nofilter">
        <item>&#160;&#160;添加朋友</item>
        <item>&#160;&#160;创建群</item>
        <item>&#160;&#160;创建团队</item>
        <item>&#160;&#160;√显示所有</item>
    </string-array>
    <string name="add_friend">添加朋友</string>
    <string name="create_huddle">创建群</string>
    <string name="create_team">创建团队</string>
    <string name="show_friend">只显示朋友</string>
    <string name="show_all">显示所有</string>
    <string name="no_fee_charge">不产生费用</string>
    <string name="fee_charge_for_net">产生流量费用</string>
    <string name="fee_charge_for_telecomm">产生通话费用</string>
    <string name="click_to_record_audio">点击录音</string>
    <string name="add_to_dial">添加拨号</string>
    <string name="dial_keyboard">拨号键盘</string>
    <string name="silent_voice">静音</string>
    <string name="phone_with_sb">与 “%1$s” 通话中</string>
    <string name="hands_free">免提</string>
    <string name="coming_call">来电</string>
    <string name="in_the_call">通话中</string>
    <string name="session_failed_as_invalid_session">会话失败，无效的会话</string>
    <string name="call_failed">呼叫失败</string>
    <string name="wifi">Wifi</string>
    <string name="lte_3g">3g</string>
    <string name="hangup_call">挂断电话</string>
    <string name="invite_video_call">邀请视频通话</string>
    <string name="video_with_sb"> “%1$s” - 视频</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="invite_add_friend">邀请添加朋友</string>
    <string name="friend_account_info_or_cell_number">朋友帐号或手机号</string>
    <string name="friend_account_or_cell_hint">example@neeteam.com</string>
    <string name="invite_info">邀请信息</string>
    <string name="send_invite_info">发邀请</string>
    <string name="add_friend_success">添加好友成功</string>
    <string name="invalid_account_please_input_again">无效的帐号，请重新输入</string>
    <string name="invite_add_friend_ellipsis">&#160;&#160;&#160;...&#160;&#160;&#160;</string>
    <string name="approve_be_invited">接受邀请</string>
    <string name="refuse_be_invited">&#160;&#160;&#160;&#160;拒绝&#160;&#160;&#160;&#160;</string>
    <string name="send_msg_to_him">发消息给他/她</string>
    <string name="friend_invite_msg">朋友邀请消息</string>
    <string name="invite_msg_has_been_sent">邀请消息已发送</string>
    <string name="has_denied">已拒绝</string>
    <string name="has_added">已添加</string>
    <string name="i_have_approved_partner_invite">我接受了对方的邀请</string>
    <string name="i_have_denied_partner_invite">我拒绝了对方的邀请</string>
    <string name="you_have_send_ainvite_to">你发了一个邀请给</string>
    <string name="refuse_your_invite">拒绝了你的邀请</string>
    <string name="has_approved_your_invite_so_to_msg">接受你的邀请,你可以给他发消息了。</string>
    <string name="new_msg_warn">新消息提醒</string>
    <string name="privacy">隐私</string>
    <string name="general">通用</string>
    <string name="network_traffic_statistics">流量统计</string>
    <string name="about_the_team">关于Team</string>
    <string name="exit_and_logout">退出登录</string>
    <string name="rev_new_msg_remind">接收新消息通知</string>
    <string name="new_msg_remind_sound">新消息提示音</string>
    <string name="keep_pace_with_system">跟随系统  ></string>
    <string name="bg_msg_remind_time">后台消息提醒时段</string>
    <string name="function_msg_no_disturb">功能消息免打扰</string>
    <string name="friends_weibo_update">朋友微博更新</string>
    <string name="set_system_func_voice_and_vibrate">设置系统功能消息提示声音和振动时间。</string>
    <string name="after_shut_no_hint_show_on_weibo_icon">关闭后，有朋友更新微博时，首屏上的“微博”按钮上不在出现红点提示。</string>
    <string name="need_to_be_invited_when_add_me_as_friend">加我为朋友时需要邀请</string>
    <string name="member_msg_will_be_shielded">Team将屏蔽黑名单中联系人的任何消息。 </string>
    <string name="blasklist">黑名单</string>
    <string name="weibo_privacy_setting">微博隐私设置</string>
    <string name="not_see_their_weibo">不看他们的微博</string>
    <string name="delete_temp_files">删除临时文件</string>
    <string name="are_you_sure_to_delete_temp_files">确定要删除临时文件吗？</string>
    <string name="language">语言</string>
    <string name="font_size">字体大小</string>
    <string name="font_size_and_more">“%1$s”></string>
    <string name="chat_bg">聊天背景</string>
    <string name="function">功能</string>
    <string name="team_web_version">Team网页版</string>
    <string name="clear_chat_history_record">清空聊天记录</string>
    <string name="small">小</string>
    <string name="medium">中</string>
    <string name="large">大</string>
    <string name="very_large">超大</string>
    <string name="are_you_sure_to_clear_his_record">你确定要清空聊天记录吗？</string>
    <string name="select_bg_pic">选择背景图</string>
    <string name="select_from_phone_gallery">从手机相册选择</string>
    <string name="apply_it_to_allchat_circumstance">将背景应用到所有聊天场景</string>
    <string name="set_ok">设置成功</string>
    <string name="team">Team</string>
    <string name="software_version">1.0</string>
    <string name="copyright_reserved_by_sj_corporation">神计公司 版权所有2014年</string>
    <string name="send">发送</string>
    <string name="message_chat_setting_title">聊天设置</string>
    <string name="message_chat_setting_title_back">返回</string>
    <string name="message_chat_setting_activity_top_chat_text">置顶聊天</string>
    <string name="message_chat_setting_activity_close_notify">关闭新消息提醒</string>
    <string name="message_chat_setting_activity_set_chat_bg">设置当前聊天背景</string>
    <string name="message_chat_setting_activity_search_chat_records_text">查找聊天记录</string>
    <string name="message_chat_setting_activity_clear_records">清空聊天记录</string>
    <string name="message_chat_setting_activity_menu_popwindow_is_confirm_clear">确定要清空聊天记录吗？</string>
    <string name="message_chat_setting_activity_menu_popwindow_confirm_clear">清空聊天记录</string>
    <string name="message_chat_setting_activity_menu_popwindow_cancel_clear">取消</string>
    <string name="add_to_blacklist_success">添加黑名单成功</string>
    <string name="add_to_blacklist_failure">添加黑名单失败</string>
    <string name="have_been_blacklist_member">已经是黑名单成员</string>
    <string name="ws_login_fail">WS登陆失败</string>
    <string name="are_you_sure_to_delete_this_friend">您确定要删除此朋友吗？</string>
    <string name="save_photo_ok">头像保存成功</string>
    <string name="test_signature_content">标签内容</string>
    <string name="test_male">男</string>
    <string name="call">呼叫</string>
    <string name="save_photo_to_addsbook">头像保存到通讯录</string>
    <string name="personal_signature">个性标签</string>
    <string name="personal_photo_ablum">个人相册</string>
    <string name="sex">性别&#160;&#160;&#160;&#160;</string>
    <string name="more_identifier">></string>
    <string name="more">更多></string>
    <string name="test_name">小明</string>
    <string name="local_addsbook_info">本地通讯录信息:</string>
    <string name="office">办公室</string>
    <string name="send_msg">发消息</string>
    <string name="make_phone">打电话</string>
    <string name="make_video">视频</string>
    <string name="edit">&#160;&#160;编辑&#160;&#160;</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其它</string>
    <string name="mark_or_unmark">加取消星标</string>
    <string name="invite_as_friend">邀请为朋友</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="set_weibo_permission">设置微博权限</string>
    <string name="send_name_card">发送名片</string>
    <string name="update_contact_info_failed">更新联系人信息失败</string>
    <string name="update_contact_info_success">更新联系人信息成功</string>
    <string name="get_contact_info_failed">获取联系人信息失败</string>
    <string name="email">电子邮件</string>
    <string name="mobile_phone">移动电话</string>
    <string name="company_phone">公司电话</string>
    <string name="department">部门</string>
    <string name="home_phone">家庭电话</string>
    <string name="fax">传真</string>
    <string name="personal_website">个人网址</string>
    <string name="set_you_info">设置你的信息</string>
    <string name="correct_mark">√</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="new_msg">新消息</string>
    <string name="new_msg_hint">新消息提醒</string>
    <string name="you_have_new_msg">您有新消息了</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="in_calling">呼叫中...</string>
    <string name="hangup">挂断</string>
    <string name="get_through">接通</string>
    <string name="refuse">拒绝</string>
    <string name="telephone">电话</string>
    <string name="input_invalid">输入不合法</string>
    <string name="complete">完成</string>
    <string name="test">测试</string>
    <string name="confirm_dialog_edittext_hint">说些什么</string>
    <string name="app_name">Kunlun</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">退出</string>
    <string name="please_wait">请稍候</string>
    <string name="back">返回</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="setting">设置</string>
    <string name="ifly_voice_normal_id">51a9ec31</string>
    <string name="network_error_please_check_it">网络异常，请检查网络后重试</string>
    <string name="main_screen_title">Team</string>
    <string name="main_screen_btn_string_publish">发布</string>
    <string name="main_screen_string_input">写点什么，分享给朋友</string>
    <string name="main_screen_string_name_test">张韶涵</string>
    <string name="menu_screen_bg_string_update_bg">更换背景</string>
    <string name="menu_screen_bg_string_update_photo">更换头像</string>
    <string name="menu_screen_bg_string_exit">退出</string>
    <string name="menu_screen_string_camera_takePhoto">拍照</string>
    <string name="update_app_check">检查更新</string>
</resources>