<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relati_tel_do_operation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/rb_click_to_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dip"
        android:text="@string/click_to_record_audio" >
    </RadioButton>

    <RelativeLayout
        android:id="@+id/relati_hang_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rb_click_to_record"
        android:layout_marginTop="12dip"
        android:background="@drawable/cm_imgbtn_bg_special"
        android:clickable="true"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/txtv_hang_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hangup"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relati_tel_do_unusual_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relati_hang_up"
        android:layout_marginTop="6dip" >

        <LinearLayout
            android:id="@+id/linear_dial_related"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/relati_add_to_dial"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cm_imgbtn_bg_normal"
                android:clickable="true"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <TextView
                    android:id="@+id/txtv_add_to_dial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_to_dial"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relati_dial_keyboard"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_weight="1"
                android:background="@drawable/cm_imgbtn_bg_normal"
                android:clickable="true"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <TextView
                    android:id="@+id/txtv_dial_keyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/dial_keyboard"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_dial_related"
            android:layout_marginTop="6dip"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/relati_silent_voice"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cm_imgbtn_bg_normal"
                android:clickable="true"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <TextView
                    android:id="@+id/txtv_silent_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/silent_voice"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relati_hands_free"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_weight="1"
                android:background="@drawable/cm_imgbtn_bg_normal"
                android:clickable="true"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <TextView
                    android:id="@+id/txtv_hands_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/hands_free"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>